@@ -10,7 +10,7 @@ public class ParserLR0 {
     private Grammar grammar;
     private Map<String, String> actionTable;
 
-    private List<Map<String, Integer>> gotoTable;
+    private final List<Map<String, Integer>> gotoTable = new ArrayList<>();
 
     public ParserLR0(Grammar grammar) {
         this.grammar = grammar;
@@ -19,7 +19,7 @@ public class ParserLR0 {
     public Map<String, List<ProductionDotIndexTuple>> computeClosureLR0(String source, List<ProductionDotIndexTuple> initialProductions)
     {
         // A -> .ABa
-        // source: A, destination: [A B a], dotIndex = 0
+        // source: A, initialProductions: {[A B a], dotIndex = 0}
 
         Map<String, List<ProductionDotIndexTuple>> closure = new HashMap<>();
         closure.put(source, initialProductions);
@@ -27,42 +27,58 @@ public class ParserLR0 {
 
         while (isClosureChanged) {
             isClosureChanged = false;
-            for(var productionDotTupleList: closure.values()) {
-                for(var productionDotTuple: productionDotTupleList) {
+            List<ProductionDotIndexTuple> closureValues = new ArrayList<>();
+            for (var productionDotTupleList: closure.values()) {
+                for (var productionDotTuple: productionDotTupleList) {
+                    closureValues.add(new ProductionDotIndexTuple(
+                            productionDotTuple.getProductionSource(),
+                            productionDotTuple.getProductionRhs(),
+                            productionDotTuple.getDotIndex()));
+                }
+            }
+            for (var productionDotTuple: closureValues) {
                     var currentProductionRhs = productionDotTuple.getProductionRhs();
+                    //  currentProductionRhs = [A B a]
                     var currentDotIndex = productionDotTuple.getDotIndex();
-                    if(currentDotIndex < currentProductionRhs.size()) {
+                    //  currentDotIndex = 0
+                    if (currentDotIndex < currentProductionRhs.size()) {
                         var currentSource = currentProductionRhs.get(currentDotIndex);
-                        if(currentSource.charAt(0) >= 'A' && currentSource.charAt(0) <= 'Z') {
-                            for(var production : this.grammar.productionMap.get(currentSource)) {
-                                var productionRhs = Arrays.asList(production.split(","));
+                        if (currentSource.charAt(0) >= 'A' && currentSource.charAt(0) <= 'Z') {
+                            for (var production : this.grammar.productionMap.get(currentSource)) {
+                                if (production.isEmpty()) continue;
+                                //  productionRhs = [A B]
+                                if (!closure.containsKey(currentSource)) {
+                                    closure.put(currentSource, new ArrayList<>(List.of(new ProductionDotIndexTuple(currentSource, production, 0))));
+                                    isClosureChanged = true;
+                                    continue;
+                                }
                                 var currentSourceProductionsList = closure.get(currentSource);
+                                //  currentSourceProductionsList = [{[A B], dotIndex - }]
                                 var isProductionAlreadyInList = false;
 
-                                for(var productionDotTupleToCheck: currentSourceProductionsList) {
+                                for (var productionDotTupleToCheck: currentSourceProductionsList) {
                                     var productionDotTupleToCheckRhs = productionDotTupleToCheck.getProductionRhs();
-                                    if(productionDotTupleToCheckRhs.size() == productionRhs.size()) {
-                                        var areProductionSymbolsAllDifferent = true;
-                                        for(int i = 0; i < productionRhs.size(); i++) {
-                                            if(!productionDotTupleToCheckRhs.get(i).equals(productionRhs.get(i))) {
-                                                areProductionSymbolsAllDifferent = false;
+                                    if (productionDotTupleToCheckRhs.size() == production.size()) {
+                                        var areProductionSymbolsTheSame = true;
+                                        for(int i = 0; i < production.size(); i++) {
+                                            if(!productionDotTupleToCheckRhs.get(i).equals(production.get(i))) {
+                                                areProductionSymbolsTheSame = false;
                                                 break;
                                             }
                                         }
-                                        if(areProductionSymbolsAllDifferent) {
+                                        if (areProductionSymbolsTheSame && productionDotTupleToCheck.getDotIndex() == 0) {
                                             isProductionAlreadyInList = true;
                                             break;
                                         }
                                     }
                                 }
                                 if(!isProductionAlreadyInList) {
-                                    currentSourceProductionsList.add(new ProductionDotIndexTuple(currentSource ,productionRhs, 0));
+                                    currentSourceProductionsList.add(new ProductionDotIndexTuple(currentSource, production, 0));
                                     isClosureChanged = true;
                                 }
                             }
                         }
                     }
-                }
             }
         }
 
@@ -135,6 +151,7 @@ public class ParserLR0 {
             for (var rhs : production.getValue()) {
                 int index = rhs.getDotIndex();
                 if (!rhs.getProductionRhs().contains(X)) continue;
+                if (rhs.getProductionRhs().isEmpty()) continue;
                 if (rhs.getProductionRhs().indexOf(X) == rhs.getDotIndex())
                 {
                     C2.add(new ProductionDotIndexTuple(lhs,rhs.getProductionRhs(), index+1));
@@ -149,30 +166,45 @@ public class ParserLR0 {
     {
         List<Map<String, List<ProductionDotIndexTuple>>> C = new ArrayList<>();
 
-        C.add(computeClosureLR0("S", List.of(new ProductionDotIndexTuple("S",List.of("S"), 0))));
+        C.add(computeClosureLR0("S'", new ArrayList<>(List.of(new ProductionDotIndexTuple("S'",List.of("S"), 0)))));
 
-        var grammarElements = grammar.nonterminalList;
+        var grammarElements = new ArrayList<>(grammar.nonterminalList);
         grammarElements.addAll(grammar.terminalList);
 
         boolean done = false;
         while (!done) {
             done = true;
+            List<Map<String, List<ProductionDotIndexTuple>>> toAdd = new ArrayList<>();
             for (var state : C) {
                 var idxOfState = C.indexOf(state);
                 for (var X : grammarElements) {
                     var gotoSubcall = goTo(state, X);
                     for (var newState : gotoSubcall) {
-                        if (!newState.isEmpty() && C.contains(newState)) {
-                            GotoTable.register(idxOfState, X, C.size(), gotoTable);
-                            C.add(newState);
+                        if (newState.toString().contains("[]")) {
+                            continue;
                         }
-                        if (C.contains(newState)) {
-                            var idxOf = C.indexOf(newState);
-                            GotoTable.register(idxOf, X, idxOf, gotoTable);
+                        if (C.toString().contains(newState.toString())) {
+                            var otherIdx = 0;
+                            var idxOf = -1;
+                            for (var other : C) {
+                                if (other.toString().equals(newState.toString())) {
+                                    idxOf = otherIdx;
+                                }
+                                else {
+                                    otherIdx += 1;
+                                }
+                            }
+                            GotoTable.register(idxOfState, X, idxOf, gotoTable);
+                        }
+                        else if (!newState.isEmpty() && !C.contains(newState)) {
+                            GotoTable.register(idxOfState, X, C.size(), gotoTable);
+                            toAdd.add(newState);
+                            done = false;
                         }
                     }
                 }
             }
+            C.addAll(toAdd);
         }
 
         return C;
@@ -189,22 +221,27 @@ public class ParserLR0 {
             System.out.println(stateId + ": " + C.get(stateId));
         }
 
-        System.out.println("  |");
+        System.out.print("    ");
         for (var nonterm : grammar.nonterminalList) {
-            System.out.println(nonterm);
+            System.out.print(nonterm + " ");
         }
-        for (var term : grammar.nonterminalList) {
-            System.out.println(term);
+        for (var term : grammar.terminalList) {
+            System.out.print(term + " ");
         }
+        System.out.println("");
 
         for (int stateId=0; stateId<C.size(); stateId++) {
-            System.out.println(stateId + " |");
+            System.out.print(stateId + " |");
             for (var nonterm : grammar.nonterminalList) {
-                System.out.println(gotoOp(stateId, nonterm));
+                System.out.print(gotoOp(stateId, nonterm) + " ");
             }
-            for (var term : grammar.nonterminalList) {
-                System.out.println(gotoOp(stateId, term));
+            for (var term : grammar.terminalList) {
+                System.out.print(gotoOp(stateId, term) + " ");
             }
+            System.out.println("");
         }
+    }
+
+    public void printActionTable() {
     }
 }
